// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<form
  className="Form"
  data-test-id="cf-ui-form"
  onSubmit={[Function]}
>
  <div
    className="Form__item Form__item--default"
    key=".0"
  >
    <TextField
      countCharacters={false}
      helpText="Please enter your name"
      id="nameInput"
      labelText="Name"
      name="nameInput"
      required={true}
      testId="cf-ui-text-field"
      textarea={false}
      value="Johannes Bugiel"
      width="full"
    />
  </div>
</form>
`;

exports[`renders the component with an additional class name 1`] = `
<form
  className="Form my-extra-class"
  data-test-id="cf-ui-form"
  onSubmit={[Function]}
>
  <div
    className="Form__item Form__item--default"
    key=".0"
  >
    <TextField
      countCharacters={false}
      helpText="Please enter your name"
      id="nameInput"
      labelText="Name"
      name="nameInput"
      required={true}
      testId="cf-ui-text-field"
      textarea={false}
      value="Johannes Bugiel"
      width="full"
    />
  </div>
</form>
`;

exports[`renders the component with condensed spacing 1`] = `
<form
  className="Form my-extra-class"
  data-test-id="cf-ui-form"
  onSubmit={[Function]}
>
  <div
    className="Form__item Form__item--condensed"
    key=".0"
  >
    <TextField
      countCharacters={false}
      helpText="Please enter your name"
      id="nameInput"
      labelText="Name"
      name="nameInput"
      required={true}
      testId="cf-ui-text-field"
      textarea={false}
      value="Johannes Bugiel"
      width="full"
    />
  </div>
</form>
`;
